--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <!-- <a href="https://www.flaticon.com/free-icons/encrypted" title="encrypted icons">Encrypted icons created by Muhammad Atif - Flaticon</a> -->
+    <link rel="icon" href="%PUBLIC_URL%/encrypted.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>enigmachat.io</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
